# Nodeglow

./: .env.example  .gitignore  DESIGN_GUIDE.md  README.md  VERSION  create-lxc.sh  docker-compose.yml
.github/workflows/: agent-build.yml  ci.yml
.next/: trace  trace-build
agent/: Cargo.toml  build.rs
agent/src/: client.rs  collector_linux.rs  collector_windows.rs  config.rs  logs_linux.rs  logs_windows.rs  main.rs  updater.rs
backend/: Dockerfile  config.py  csrf.py  database.py  entrypoint.sh  main.py  notifications.py  ratelimit.py  requirements-dev.txt  requirements.txt  scheduler.py  templating.py
backend/alembic/: env.py
backend/integrations/: __init__.py  _base.py  adguard.py  cloudflare.py  firewall.py  gitea.py  homeassistant.py  npm.py  nut.py  phpipam.py  pihole.py  portainer.py  proxmox.py  redfish.py  speedtest.py  swisscom.py  synology.py  truenas.py  unas.py  unifi.py
backend/models/: __init__.py  agent.py  agent_install_token.py  ai_usage.py  alert_rule.py  api_key.py  audit.py  backup.py  bandwidth.py  base.py  credential.py  discovered_port.py  incident.py  integration.py  log_template.py  ping.py  scanner.py  settings.py  snmp.py
backend/routers/: agents.py  alerts.py  api_v1.py  auth.py  backups.py  bandwidth.py  credentials.py  dashboard.py  digest.py  incidents.py  integrations.py  ping.py  rules.py  settings.py  setup.py  snmp.py  syslog.py  (+5 more)
clickhouse/: config.xml  init.sql
docs/: FRONTEND_SPEC.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
sidecar/: Dockerfile  update-server.py
(+244 files in other folders)
