[package]
name = "nodeglow-agent"
version = "0.1.0"
edition = "2021"
description = "Nodeglow monitoring agent — lightweight, cross-platform system metrics collector"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "nodeglow-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.4"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1"

[target.'cfg(target_os = "windows")'.dependencies]
sysinfo = "0.32"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
